Homework 8: Added generated code.
